<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvAgeCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age_calculator"
        app:layout_constraintBottom_toTopOf="@+id/edtFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        style="@style/labelHeadingText"/>

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        android:hint="@string/hint_edt_first_name"
        app:layout_constraintBottom_toTopOf="@+id/edtLastName"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvAgeCalculator"
        style="@style/inputName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edt_last_name"
        app:layout_constraintBottom_toTopOf="@+id/edtDateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        style="@style/inputName" />

    <EditText
        android:id="@+id/edtDateOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edt_date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculateAge"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:focusable="false"
        android:longClickable="false" />

    <Button
        android:id="@+id/btnCalculateAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDateOfBirth"
        style="@style/labelText"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>