<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <TextView
        android:id="@+id/tvLabelAgeCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/label_age_calculator"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        style="@style/labelHeadingText"/>

    <TextView
        android:id="@+id/tvLabelFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        android:text="@string/label_first_name"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelLastName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelAgeCalculator"
        style="@style/labelText"/>

    <TextView
        android:id="@+id/tvLabelLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        app:layout_constraintBottom_toTopOf="@+id/tvLabelAge"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelFirstName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        style="@style/labelText"/>

    <TextView
        android:id="@+id/tvLabelAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelLastName"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        android:layout_marginBottom="@dimen/common_bottom_margin"
        style="@style/labelText"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvLabelFirstName,tvLabelLastName,tvLabelAge" />

    <TextView
        android:id="@+id/tvValueFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelFirstName"
        app:layout_constraintStart_toEndOf="@+id/labelBarrier"
        android:layout_marginStart="@dimen/common_left_margin"
        style="@style/valueText"/>

    <TextView
        android:id="@+id/tvValueLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelLastName"
        app:layout_constraintStart_toStartOf="@+id/labelBarrier"
        android:layout_marginStart="@dimen/common_left_margin"
        style="@style/valueText"/>

    <TextView
        android:id="@+id/tvValueAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelAge"
        app:layout_constraintStart_toStartOf="@+id/labelBarrier"
        android:layout_marginStart="@dimen/common_left_margin"
        style="@style/valueText"/>

</androidx.constraintlayout.widget.ConstraintLayout>